# pymol-open-source-build

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  vcpkg.json  win_automator.bat
.github/workflows/: build.yml  unix_like_wheels.yaml  unix_like_wheels.yaml.bak  wheels.yaml  windows_wheels.yaml  windows_wheels.yaml.bak
automations/: build_wheel.py  const.py  dev_env.py  my_automator.py  run_pytest.py  utils.py
pre-built/windows/: python311_d.lib
scripts/python/: create_generated_files.py
tests/: test_pymol.py
