[build-system]
requires = [
  "scikit-build-core",
  "setuptools>=69.2.0",
  "numpy>=2.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "pymol"
readme = "README.md"
version = "3.1.0a0+2"
requires-python = ">=3.10"
license = {file = "LICENSE"}
#description = """
#PyMOL is a Python-enhanced molecular graphics tool.
#It excels at 3D visualization of proteins, small molecules, density,
#surfaces, and trajectories. It also includes molecular editing,
#ray tracing, and movies. Open Source PyMOL is free to everyone!
#"""
authors = [
  {name = "Schrodinger", email = "pymol-users@lists.sourceforge.net"},
]
dependencies = [
  "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
  "pillow==10.3.0",
  "pytest==8.2.2",
]

[project.urls]
Homepage = "https://pymol.org"
Documentation = "https://pymol.org/dokuwiki"
Repository = "https://github.com/schrodinger/pymol-open-source"
"Bug Tracker" = "https://github.com/schrodinger/pymol-open-source/issues"
Changelog = "https://github.com/schrodinger/pymol-open-source/blob/master/ChangeLog"

[project.scripts]
pymol = "pymol:launch"

[tool.scikit-build]
build.verbose = true
logging.level = "DEBUG"
cmake.args = [
  "-DCMAKE_TOOLCHAIN_FILE=./vendor/vcpkg/scripts/buildsystems/vcpkg.cmake",
  "-DVCPKG_INSTALLED_DIR=./vcpkg_installed",
  "-DBUILD_PYTHON_EXTENSION=ON"
]
sdist.include = [
  "build",
  "pre-built",
  "vcpkg_installed",
  "vendor/vcpkg"
]
[tool.scikit-build.wheel.packages]
chempy = "modules/chempy"
pmg_qt = "modules/pmg_qt"
pmg_tk = "modules/pmg_tk"
pymol = "modules/pymol"
pymol2 = "modules/pymol2"
"pymol/data" = "data"

[tool.cibuildwheel]
#build = ["cp310-*", "cp311-*", "cp312-*"]
build = ["cp311-*"] # Only for debug purposes
# Skip 32-bit builds
#skip = ["*-win32", "*-manylinux_i686"]
skip = ["*-manylinux_i686"]
test-requires = ["pytest", "importlib_metadata"]
test-command = "pytest {project}/tests/"

[tool.cibuildwheel.environment]
VCPKG_ROOT = "{project}/vendor/vcpkg"

[tool.cibuildwheel.linux]
before-all = "yum install -y perl perl-IPC-Cmd zip"
#manylinux-x86_64-image = "manylinux2014"
manylinux-x86_64-image = "manylinux_2_28"
